update code to fix image

--- a/task5.1.html
+++ b/task5.1.html
@@ -11,27 +11,30 @@
 
 <body>
     <div id="flex-container">
+        <!--left content-->
         <div class="left-content">
-            <div class="main-img"><img src="image/image1.png" alt="fashion"></div>
+            <!--main image-->
+            <div class="main-img">
+                <img src="image/image1.png" alt="fashion">
+            </div>
+            <!--sub image-->
             <div class="sub-img">
-
-                <div class="slide-img"> <img src="image/image2.png" alt="fashion"> </div>
-                <div class="slide-img"> <img src="image/image3.png" alt="fashion"> </div>
-                <div class="slide-img"> <img src="image/image4.png" alt="fashion"> </div>
-                <div class="slide-img"> <img src="image/image5.png" alt="fashion"> </div>
+                <img src="image/image2.png" alt="fashion">
+                <img src="image/image3.png" alt="fashion">
+                <img src="image/image4.png" alt="fashion">
+                <img src="image/image5.png" alt="fashion">
             </div>
         </div>
         <div class="right-content">
             <div class="begin-session">
-                <p>BEGIN SESSION</p>
-                <img src="./image/Card.png" alt="card">
+                <p>BEGIN SESSION <img src="./image/Card.png" alt="card"></p>
             </div>
             <div class="main-content">
                 <h1>TRACK BUTTONS</h1>
                 <p class="cost">$199,99</p>
                 <p class="seri">IVO WHITE|7272/337</p>
-                <p class="description">We work with our suppliers, worker, unions and<br>international bodies to develop
-                    a supply chain where human<br>rights are promoted and respected, contributed to the<br>United
+                <p class="description">We work with our suppliers, worker, unions and international bodies to develop
+                    a supply chain where human rights are promoted and respected, contributed to the United
                     Nations Substainable Development Goals.</p>
                 <div>
                     <span class="box-content">EP</span>
@@ -41,11 +44,13 @@
                     <span class="box-content">EG</span>
                 </div>
 
-                <a class="size-guide"><p >SIZE GUIDE</p></a>
+                <a class="size-guide">
+                    <p>SIZE GUIDE</p>
+                </a>
 
                 <div class="button-buy">ADD TO BAG</div>
-                 <div class="button-hi">ahihi đồ con chó</div>
-                <p class="">ADD TO FAVARITES <br />CALCULATE SHIPPING AND DELIVERY</p>
+
+                <p class="add-favarite">ADD TO FAVARITES <br />CALCULATE SHIPPING AND DELIVERY</p>
 
             </div>
         </div>
